--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
         run: php artisan key:generate
       - name: Generate storage link
         run: php artisan storage:link
+      - name: Optimize 
+        run: php artisan optimize
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
       - name: 📂 Sync files
